SERVER-50808 add default value for non-constructor initialized value in ExpressionSchemaWalker

GitOrigin-RevId: a76593392dee48c63e34cc87b8fe6c39f3ab9a4c